docs: Add multilingual README and update .gitignore
- Add README_EN.md (English)
- Add README_CN.md (Simplified Chinese)
- Add README_TW.md (Traditional Chinese)
- Add README_JP.md (Japanese)
- Update .gitignore with comprehensive exclusions
- Security scan completed: no sensitive data found
- All documentation follows GitHub best practices

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,102 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual Environment
+venv/
+ENV/
+env/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.pydevproject
+.settings/
 launch.json
-__pycache__
-voxcpm.egg-info
+
+# OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Environment Variables
+.env
+*.env
+!.env.example
+
+# Logs
+*.log
+logs/
+*.log.*
+
+# Models & Data
+models/
+*.pth
+*.pt
+*.ckpt
+*.safetensors
+checkpoints/
+outputs/
+uploads/
+cache/
+.cache/
+
+# Docker
+.dockerignore
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.bak
+*.swp
+
+# API Keys & Secrets
+*.key
+*.pem
+secrets/
+credentials/
+
+# Test files
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.hypothesis/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
