feat: Release v1.0.1 - Performance optimization and Chinese UI
🚀 Performance Improvements:
- Reduced default inference steps from 10 to 5 (2x faster)
- Added ultra-fast mode with 3 steps (3-4x faster)
- Disabled retry_badcase by default for faster processing
- Added torch.compile support for model optimization

🎨 UI Enhancements:
- Complete Chinese interface with detailed usage guide
- Added speed mode selector (Fast/Standard/High Quality)
- Rich documentation and tips throughout the UI
- Added Help tab with comprehensive guide

📊 Speed Comparison:
- Fast mode (3 steps): ~10 seconds
- Standard mode (5 steps): ~15 seconds (recommended)
- High quality mode (10 steps): ~30 seconds

🔧 Technical Changes:
- Updated version to 1.0.1
- Optimized default parameters
- Fixed Gradio compatibility issues
- Enhanced error handling

📝 Documentation:
- Added performance optimization guide
- Added troubleshooting section
- Added API usage examples

--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -1,8 +1,8 @@
 FROM nvidia/cuda:12.1.0-cudnn8-devel-ubuntu22.04
 
 LABEL maintainer="neosun"
-LABEL version="1.0.0"
-LABEL description="VoxCPM All-in-One TTS Service with GPU support"
+LABEL version="1.0.1"
+LABEL description="VoxCPM All-in-One TTS Service with GPU support - Performance Optimized"
 
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
