--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -1,8 +1,8 @@
 FROM nvidia/cuda:12.1.0-cudnn8-devel-ubuntu22.04
 
 LABEL maintainer="neosun"
-LABEL version="1.0.2"
-LABEL description="VoxCPM All-in-One TTS Service with GPU support - Auto ASR"
+LABEL version="1.0.3"
+LABEL description="VoxCPM All-in-One TTS Service - Preload Models + Smart Cache"
 
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
@@ -24,7 +24,7 @@ WORKDIR /app
 # Copy only necessary files
 COPY pyproject.toml ./
 COPY src ./src
-COPY server.py gpu_manager.py mcp_server.py ./
+COPY server.py gpu_manager.py mcp_server.py cache_manager.py ./
 COPY README.md LICENSE ./
 
 # Install all dependencies
@@ -38,7 +38,7 @@ RUN pip3 install --upgrade pip && \
 # RUN python3 -c "from modelscope import snapshot_download; snapshot_download('iic/speech_zipenhancer_ans_multiloss_16k_base'); snapshot_download('iic/SenseVoiceSmall')"
 
 # Create directories
-RUN mkdir -p /app/uploads /app/outputs /app/models
+RUN mkdir -p /app/uploads /app/outputs /app/models /app/cache
 
 EXPOSE 7861
 
