--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   voxcpm:
-    build: .
+    image: neosun/voxcpm-allinone:1.0.4
     container_name: voxcpm-service
     runtime: nvidia
     environment:
