--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     ports:
       - "0.0.0.0:${PORT:-7861}:7861"
     volumes:
+      - ./server.py:/app/server.py
+      - ./gpu_manager.py:/app/gpu_manager.py
+      - ./cache_manager.py:/app/cache_manager.py
       - ./models:/app/models
       - /tmp/voxcpm-tts/uploads:/app/uploads
       - /tmp/voxcpm-tts/outputs:/app/outputs
