feat: OpenAI-compatible TTS API - All-in-one Docker image
✅ Full OpenAI /v1/audio/speech API compatibility
✅ 11 voice options (alloy, echo, fable, onyx, nova, shimmer, etc.)
✅ 3 models (tts-1, tts-1-hd, gpt-4o-mini-tts)
✅ Multiple formats (mp3, wav, opus, aac, flac, pcm)
✅ Streaming audio generation
✅ Drop-in replacement for OpenAI TTS
✅ All-in-one Docker image: neosun/voxcpm-allinone:1.1.0-openai

New files:
- openai_api.py: OpenAI-compatible API implementation
- test_openai_api.py: Comprehensive test suite
- OPENAI_API.md: Complete API documentation
- OPENAI_QUICKSTART.md: 5-minute quick start guide

Updated:
- Dockerfile.allinone: v1.1.0 with OpenAI API
- server.py: Integrated OpenAI router
- docker-compose.yml: Use new image

--- a/Dockerfile.allinone
+++ b/Dockerfile.allinone
@@ -1,8 +1,8 @@
 FROM nvidia/cuda:12.1.0-cudnn8-devel-ubuntu22.04
 
 LABEL maintainer="neosun"
-LABEL version="1.0.6"
-LABEL description="VoxCPM All-in-One TTS Service - Preload Models + Smart Cache"
+LABEL version="1.1.0"
+LABEL description="VoxCPM All-in-One TTS Service - OpenAI Compatible API + Streaming + Smart Cache"
 
 ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
@@ -25,7 +25,7 @@ WORKDIR /app
 # Copy only necessary files
 COPY pyproject.toml ./
 COPY src ./src
-COPY server.py gpu_manager.py mcp_server.py cache_manager.py ./
+COPY server.py gpu_manager.py mcp_server.py cache_manager.py openai_api.py ./
 COPY README.md LICENSE ./
 
 # Install all dependencies
