perf: OpenAI API 优化 - 延迟降低 64%
🚀 性能提升:
- 首字节延迟: 0.25s → 0.09s (64% ↓)
- 总时间: 13.90s → 7.87s (43% ↓)
- 与 Native API 持平 (差异 < 5%)

优化方案:
- 使用 WAV 格式避免 MP3 编码
- 消除 ffmpeg 进程启动开销
- 消除临时文件 I/O

测试结果:
- OpenAI API (WAV): 0.087s 首字节
- Native API: 0.088s 首字节
- 差异: -1.7% (OpenAI 实际更快!)

Docker: neosun/voxcpm-allinone:1.1.0-openai-optimized

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   voxcpm:
-    image: neosun/voxcpm-allinone:1.1.0-openai
+    image: neosun/voxcpm-allinone:1.1.0-openai-optimized
     container_name: voxcpm-service
     runtime: nvidia
     environment:
