fix: Include example.wav in Docker image
✅ Fixed FileNotFoundError for /app/examples/example.wav
✅ Updated .dockerignore to allow examples/example.wav
✅ Updated Dockerfile to copy examples directory
✅ Tested locally - OpenAI API now works correctly

Issue: OpenAI API was failing with HTTP/2 stream error
Root cause: Missing reference audio file in container
Solution: Include example.wav in Docker image

--- a/.dockerignore
+++ b/.dockerignore
@@ -34,8 +34,9 @@ outputs/*
 uploads/*
 !uploads/.gitkeep
 
-# Audio files
+# Audio files (except example.wav)
 *.wav
+!examples/example.wav
 *.mp3
 *.flac
 *.ogg
@@ -50,7 +51,6 @@ uploads/*
 
 # Documentation (keep essential only)
 docs/
-examples/*.wav
 assets/
 
 # Test files
