--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   voxcpm:
-    image: neosun/voxcpm-allinone:1.3.1-audio-fix
+    image: neosun/voxcpm-allinone:1.4.0-custom-voice
     container_name: voxcpm-service
     runtime: nvidia
     environment:
