chore: Update to v1.4.0 stable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   voxcpm:
-    image: neosun/voxcpm-allinone:1.4.0-custom-voice
+    image: neosun/voxcpm-allinone:1.4.0
     container_name: voxcpm-service
     runtime: nvidia
     environment:
